--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "classnames": "^2.1.5",
+    "todomvc-app-css": "^2.0.0",
+    "todomvc-common": "^1.0.1"
   },
   "devDependencies": {
     "react-scripts-kotlin": "2.1.5"
